# nucleic-acid-utility

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/api/: canvas-renderer.md  clipboard-manager.md  codon-table.md  overview.md  sequence-converter.md  sequence-validator.md  theme-manager.md  url-handler.md
docs/deploy/: production.md  server.md
docs/guide/: conversions.md  getting-started.md  sharing.md  shortcuts.md  theming.md  visualizations.md
public/: index.html  robots.txt  script.js  script.min.js  sitemap.xml  style.css  style.full.css  sw.js
src/: App.tsx  main.tsx  style.css  style.full.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AboutSection.tsx  CodonWheel.tsx  ConversionSelector.tsx  ExamplePresets.tsx  NucleicAcidUtility.tsx  QuizMode.tsx  ResultsDisplay.tsx  SequenceInput.tsx  SequenceStats.tsx  SkipLink.tsx  StructureVisualizer.tsx  ThemeToggle.tsx  Toast.tsx
src/logic/: CanvasRenderer.ts  ClipboardManager.ts  CodonTable.ts  QuizEngine.ts  SequenceAnalyzer.ts  SequenceConverter.ts  SequenceValidator.ts  ThemeManager.ts  UrlHandler.ts
src/utils/: toast.ts
