[package]
name = "nucleic-acid-utility"
version = "1.2.0"
description = "A small web application to pair DNA and RNA bases for the subject of biology."
authors = ["richie-rich90454"]
license = "MIT"
repository = "https://github.com/richie-rich90454/nucleic-acid-utility"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
